--- a/system/package.json
+++ b/system/package.json
@@ -10,9 +10,9 @@
     "upgrade": "ncu -u",
     "watch": "netlify watch",
     "test": "NODE_OPTIONS='--experimental-vm-modules --es-module-specifier-resolution=node' jest",
-    "codespaces-dev": "kill-port 8080 8000 8111 3333; netlify dev",
+    "codespaces-dev": "kill-port 8888 8080 8000 8111 3333; netlify dev",
     "spaces-dev-netlify": "http-server public -a 127.0.0.1 -p 8111 --cors -c-1 -i -s",
-    "codespaces-dev-debug": "kill-port 8080 8000 8111 3333; netlify dev --debug",
+    "codespaces-dev-debug": "kill-port 8888 8080 8000 8111 3333; netlify dev --debug",
     "codespaces-dev-public": "kill-port 8080 8888 8000 8111 3333; netlify dev --live",
     "old-spaces-dev-netlify": "http-server public -a 127.0.0.1 -p 8080 --cors -c-1 -i --P http://127.0.0.1:8000?",
     "local-dev-netlify": "http-server public -a 127.0.0.1 -p 8080 --cors -c-1 -i -s --P https://127.0.0.1:443?",
