--- a/system/package.json
+++ b/system/package.json
@@ -39,6 +39,7 @@
     "@ffmpeg/ffmpeg": "^0.11.5",
     "@geckos.io/client": "^2.2.3",
     "chrome-aws-lambda": "^10.1.0",
+    "crypto": "^1.0.1",
     "gl-matrix": "^3.4.3",
     "got": "^12.5.3",
     "idb": "^7.1.0",
