--- a/system/package.json
+++ b/system/package.json
@@ -44,6 +44,7 @@
     "got": "^12.5.3",
     "idb": "^7.1.0",
     "nanoid": "^4.0.0",
+    "patreon": "^0.4.1",
     "redis": "^4.5.1",
     "three": "^0.146.0",
     "web3": "^1.8.1"
