--- a/system/package.json
+++ b/system/package.json
@@ -42,6 +42,7 @@
     "crypto": "^1.0.1",
     "gl-matrix": "^3.4.3",
     "got": "^12.5.3",
+    "gotrue-js": "^0.9.29",
     "idb": "^7.1.0",
     "nanoid": "^4.0.0",
     "patreon": "^0.4.1",
