--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -33,8 +33,7 @@
 [context.production]
   NODE_ENV= "production"
 [[headers]]
-  # Define which paths this specific [[headers]] block will cover.
-  for = "/*"
+  for = "/*" # Define which paths this specific [[headers]] block will cover.
   [headers.values]
     Access-Control-Allow-Origin = "*"
     # These headers are required in order for SharedArrayBuffer to be enabled.
@@ -43,6 +42,11 @@
     Cross-Origin-Opener-Policy = "same-origin"
     # Cross-Origin-Resource-Policy = "cross-origin"
     Vary = "*"
+[[headers]]
+  for = "/*.mjs|/*.js"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Content-Security-Policy = "script-src 'self';"
 [[redirects]]
   from = "https://www.4esthetic.com/*"
   to = "https://aesthetic.computer/:splat"
