--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "./github-discord.sh"
+  command = "bash ./github-discord.sh"
   publish = "public"
 [functions]
   node_bundler = "esbuild"
