--- a/system/package.json
+++ b/system/package.json
@@ -18,6 +18,7 @@
     "local-dev-netlify": "http-server public -a 127.0.0.1 -p 8080 --cors -c-1 -i -s --P https://127.0.0.1:443?",
     "local-dev-ssl": "http-server public -S -C ../ssl-dev/localhost.pem -K ../ssl-dev/localhost-key.pem -p 443 --cors -c-1",
     "parcel-dev": "parcel --cert ../ssl-dev/localhost.pem --key ../ssl-dev/localhost-key.pem -p 443",
+    "ordinal-rollup": "rollup public/aesthetic.computer/boot.mjs --file public/aesthetic.computer/ordinal-boot.js --output.inlineDynamicImports && terser public/aesthetic.computer/ordinal-boot.js -o public/aesthetic.computer/ordinal-min-boot.js --compress && rm public/aesthetic.computer/ordinal-boot.js",
     "feral-file-rollup": "rollup public/aesthetic.computer/boot.js --file public/aesthetic.computer/feral-file-boot.js --no-treeshake --inlineDynamicImports && uglifyjs public/aesthetic.computer/feral-file-boot.js -o public/aesthetic.computer/feral-file-ugly-boot.js --compress && rm public/aesthetic.computer/feral-file-boot.js"
   },
   "staticFiles": {
@@ -63,6 +64,9 @@
     "playwright-core": "^1.26.1",
     "prettier": "^2.7.1",
     "puppeteer": "^19.3.0",
-    "typescript": "^4.8.4"
+    "rollup": "^3.15.0",
+    "terser": "^5.16.3",
+    "typescript": "^4.8.4",
+    "uglify": "^0.1.5"
   }
 }
