--- a/system/package.json
+++ b/system/package.json
@@ -41,10 +41,12 @@
     "@geckos.io/client": "^2.2.3",
     "chrome-aws-lambda": "^10.1.0",
     "crypto": "^1.0.1",
+    "express-oauth2-jwt-bearer": "^1.3.0",
     "gl-matrix": "^3.4.3",
     "got": "^12.5.3",
     "gotrue-js": "^0.9.29",
     "idb": "^7.1.0",
+    "jsonwebtoken": "^9.0.0",
     "nanoid": "^4.0.0",
     "patreon": "^0.4.1",
     "redis": "^4.5.1",
