add user to service files

--- a/video-sync/autostart-child.service
+++ b/video-sync/autostart-child.service
@@ -2,6 +2,7 @@
 Description=Autostart Child
 
 [Service]
+User=georgica
 ExecStart=/home/georgica/aesthetic.computer/video-sync/autostart-child.sh
 
 [Install]
