finish video-sync version 1

--- a/video-sync/package.json
+++ b/video-sync/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-sync",
   "version": "1.0.0",
-  "description": "A simple video player with synchronized playback between two Raspberry Pi 2s",
+  "description": "Created for Georgica Pettus' `Screenplay` work.",
   "main": "server.js",
   "dependencies": {
     "ws": "^8.4.0"
@@ -9,5 +9,5 @@
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Jeffrey Alan Scudder"
+  "author": "Jeffrey Alan Scudder (digitpain)"
 }
