--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/digitpain/aesthetic.computer#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "wrangler": "^2.18.0"
   }
 }
