--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The header package for the whole aesthetic.computer codebase.",
   "type": "module",
   "scripts": {
+    "url": "node generate-local-url.js",
     "code": "cd system; npm run codespaces-dev",
     "code:debug": "cd system; npm run codespaces-dev-debug",
     "code:live": "cd system; npm run codespaces-dev-public",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "qrcode-terminal": "^0.12.0",
     "wrangler": "^2.18.0"
   }
 }
