--- a/system/package.json
+++ b/system/package.json
@@ -40,7 +40,7 @@
     "@ffmpeg/ffmpeg": "^0.11.5",
     "@geckos.io/client": "^2.2.3",
     "@mediapipe/hands": "^0.4.1675469240",
-    "@mediapipe/tasks-vision": "^0.1.0-alpha-12",
+    "@mediapipe/tasks-vision": "^0.10.0",
     "chrome-aws-lambda": "^10.1.0",
     "crypto": "^1.0.1",
     "express-oauth2-jwt-bearer": "^1.3.0",
