--- a/system/package.json
+++ b/system/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "nanoid": "^4.0.0",
+    "openai-streams": "^5.3.0",
     "patreon": "^0.4.1",
     "redis": "^4.5.1",
     "three": "^0.146.0",
