--- a/edge-stream/package.json
+++ b/edge-stream/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "description": "Edge functions for supporting streamable responses in aesthetic.computer. Hosted by Vercel at ai.aesthetic.computer.",
   "main": "index.js",
-  "author": "Jeffrey Alan Scudder"
+  "author": "Jeffrey Alan Scudder",
+  "dependencies": {
+    "openai-streams": "^5.3.0"
+  }
 }
