deploy gpt-3.5 test with new calling code

--- a/edge-stream/package.json
+++ b/edge-stream/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "Jeffrey Alan Scudder",
   "dependencies": {
+    "eventsource-parser": "^1.0.0",
     "openai-streams": "^5.3.0"
   }
 }
