--- a/edge-stream/package.json
+++ b/edge-stream/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "author": "Jeffrey Alan Scudder",
   "dependencies": {
+    "busboy": "^1.6.0",
     "eventsource-parser": "^1.0.0",
+    "openai": "^3.2.1",
     "openai-streams": "^5.3.0"
   }
 }
