--- a/edge-stream/package.json
+++ b/edge-stream/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "busboy": "^1.6.0",
     "eventsource-parser": "^1.0.0",
+    "multiparty": "^4.2.3",
     "openai": "^3.2.1",
     "openai-streams": "^5.3.0"
   }
