--- a/system/package.json
+++ b/system/package.json
@@ -41,6 +41,7 @@
     "@geckos.io/client": "^2.2.3",
     "@mediapipe/hands": "^0.4.1675469240",
     "@mediapipe/tasks-vision": "^0.10.0",
+    "busboy": "^1.6.0",
     "chrome-aws-lambda": "^10.1.0",
     "crypto": "^1.0.1",
     "express-oauth2-jwt-bearer": "^1.3.0",
@@ -51,6 +52,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "nanoid": "^4.0.0",
+    "openai": "^3.2.1",
     "patreon": "^0.4.1",
     "redis": "^4.5.1",
     "three": "^0.146.0",
