--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "url": "node generate-local-url.js",
+    "ac": "npm run aesthetic",
     "aesthetic": "concurrently --raw \"npm run code\" \"npm run server:session\" \"npm run edge\" \"npm run url\"",
     "code": "cd system; npm run codespaces-dev",
     "edge": "concurrently --raw \"vercel dev\" \"http-server edge-stream -a 127.0.0.1 -p 9000 --cors -c-1 -i --P http://localhost:3000 -S --cert ssl-dev/localhost.pem --key ssl-dev/localhost-key.pem\"",
