llm conversational thread support for prompt characters (stored locally like paintings) with `forget` to clear a conversation

--- a/edge-stream/package.json
+++ b/edge-stream/package.json
@@ -9,6 +9,7 @@
     "eventsource-parser": "^1.0.0",
     "multiparty": "^4.2.3",
     "openai": "^3.2.1",
+    "openai-gpt-token-counter": "^1.0.3",
     "openai-streams": "^5.3.0"
   }
 }
