prompt ux / button overhaul; ngrok support; local redirect for edge-stream (get gpt working on lan)

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "url": "node generate-local-url.js",
     "ac": "npm run aesthetic",
+    "tunnel": "ngrok http https://localhost:8888 --domain local.aesthetic.computer",
     "aesthetic": "concurrently --raw \"npm run code\" \"npm run server:session\" \"npm run edge\" \"npm run url\"",
     "code": "cd system; npm run codespaces-dev",
-    "edge": "concurrently --raw \"vercel dev\" \"http-server edge-stream -a 127.0.0.1 -p 9000 --cors -c-1 -i --P http://localhost:3000 -S --cert ssl-dev/localhost.pem --key ssl-dev/localhost-key.pem\"",
+    "edge": "vercel dev",
+    "edge.old": "concurrently --raw \"vercel dev\" \"http-server edge-stream -p 9000 --cors -c-1 -i --P http://localhost:3000 -S --cert ssl-dev/localhost.pem --key ssl-dev/localhost-key.pem\"",
     "code:debug": "cd system; npm run codespaces-dev-debug",
     "code:live": "cd system; npm run codespaces-dev-public",
     "new": "node generate-new-piece.mjs",
