--- a/system/package.json
+++ b/system/package.json
@@ -48,6 +48,7 @@
     "gl-matrix": "^3.4.3",
     "got": "^12.5.3",
     "gotrue-js": "^0.9.29",
+    "gpt3-tokenizer": "^1.1.5",
     "idb": "^7.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
