add `code piece-name` command to donwload existing source code or start a new piece from the blank template, with custom description and/or title

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -162,7 +162,20 @@
   to = "http://localhost:3000/api/ask"
   status = 200
   force = false
-# This should be a 404...
+# Index
+[[redirects]]
+  from = "/"
+  to = "/.netlify/builders/index"
+  status = 200
+  force = true
+# Catch any unfound disk paths to the blank disk.
+[[redirects]]
+  from = "/aesthetic.computer/disks/*"
+  to = "/aesthetic.computer/disks/404.mjs"
+  status = 404
+  force = false
+# Reroute any other unfound file to the index.
+# TODO: This should be a 404...
 [[redirects]]
   from = "/*"
   to = "/.netlify/builders/index"
