add `publish` button to vscode extension for guests and users, with guest piece routing (user still wip)

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -60,8 +60,8 @@
     Vary = "*"
 [[redirects]]
   from = "/media/*"
-  to = "https://media.aesthetic-computer.workers.dev/media/:splat"
-  # to = "http://localhost:8787/media/:splat" # Uncomment for developing the Cloudflare worker.
+  # to = "https://media.aesthetic-computer.workers.dev/media/:splat"
+  to = "http://localhost:8787/media/:splat" # Uncomment for developing the Cloudflare worker.
   status = 200
   force = true
 # [[redirects]]
