--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "reload": "npm run build; npm run install:ext;",
     "build": "vsce package",
-    "install:ext": "code --install-extension aesthetic-computer-code-1.0.0.vsix",
+    "install:ext": "code --install-extension aesthetic-computer-code-1.1.0.vsix",
     "publish": "vsce publish minor"
   },
   "main": "./extension.js",
@@ -22,6 +22,10 @@
       {
         "command": "aestheticComputer.runPiece",
         "title": "aesthetic.computer: Run Piece ➡️"
+      },
+      {
+        "command": "aestheticComputer.publishPiece",
+        "title": "aesthetic.computer: Publish Piece ⬆️️"
       },
       {
         "command": "aestheticComputer.enterCode",
