--- a/media/package.json
+++ b/media/package.json
@@ -1,12 +1,12 @@
 {
   "name": "media",
   "version": "0.0.0",
-  "devDependencies": {
-    "wrangler": "3.1.1"
-  },
   "private": true,
   "scripts": {
     "start": "wrangler dev --env development",
     "deploy": "wrangler publish"
+  },
+  "dependencies": {
+    "wrangler": "^2.20.0"
   }
 }
