--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -60,6 +60,7 @@
     "@vscode/vsce": "^2.19.0"
   },
   "dependencies": {
-    "node-fetch": "^2.6.12"
+    "got": "^13.0.0",
+    "node-fetch": "^3.3.1"
   }
 }
