add status updates for all users aka `mood` command (with homepage motd support) and show current mood on profile pages

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -139,6 +139,10 @@
   to = "/.netlify/functions/vary"
   status = 200
 [[redirects]]
+  from = "/api/mood/*"
+  to = "/.netlify/functions/mood"
+  status = 200
+[[redirects]]
   from = "/api/profile/*"
   to = "/.netlify/functions/profile"
   status = 200
