--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
   },
   "search.useIgnoreFiles": true,
   "editor.minimap.scale": 1,
-  "editor.minimap.autohide": false,
+  "editor.minimap.autohide": true,
   "liveServer.settings.port": 5501
 }
