--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "concurrently": "^8.0.1",
     "got": "^12.6.0",
     "http-server": "^14.1.1",
+    "kill-port": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "qrcode-terminal": "^0.12.0",
