--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -93,7 +93,7 @@
   from = "https://botce.ac"
   to = "https://aesthetic.computer/botce"
   status = 200
-  force = false
+  force = true
 [[redirects]]
   from = "https://aesthetic.direct"
   to = "https://tiktok.com/@aesthetic.direct"
