--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -91,9 +91,9 @@
   force = true
 [[redirects]]
   from = "https://wand.ac"
-  to = "https://aesthetic.computer/wand"
-  status = 301
-  force = true
+  to = "/wand"
+  status = 200
+  force = false
 [[redirects]]
   from = "https://aesthetic.direct"
   to = "https://tiktok.com/@aesthetic.direct"
